<resources>
    <string name="app_name">Weekendówka</string>
    <string name="hint_company_name">Nazwa przedsiębiorstwa</string>
    <string name="hint_address">Ulica i nr, kod pocztowy, miejscowość, państwo:</string>
    <string name="hint_phone">Numer telefonu (w tym międzynarodowy numer kierunkowy):</string>
    <string name="hint_e_mail">Adres e-mail</string>
    <string name="hint_declarer_name">Imię i nazwisko oświadczyciela</string>
    <string name="hint_declarer_position">Stanowisko w przedsiębiorstwie</string>
    <string name="hint_driver_birthday">Data urodzenia</string>
    <string name="hint_driver_id">Numer prawa jazdy lub dowodu osobistego lub paszportu</string>
    <string name="hint_employment_date">Data zatrudnienia</string>
    <string name="driver_rest_date_start_hint">Data rozpoczęcia</string>
    <string name="driver_rest_date_end_hint">Data zakończenia</string>
    <string name="driver_rest_time_start_hint">Czas rozpoczęcia</string>
    <string name="driver_rest_time_end_hint">Czas zakończenia</string>
    <string name="hint_place_of_declarer_signing">Miejsce podpisania oświadczającego</string>
    <string name="hint_place_of_driver_signing">Miejsce podpisania kierowcy</string>
    <string name="date">Data</string>
    <string name="error_general">Coś poszło nie tak</string>
    <string name="dismiss">Zamknij</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="onboarding"><![CDATA[<b>Cześć, jestem Jacek. Witaj w mojej aplikacji!</b><br><br>Stworzyłem ją, w ramach prezentu, na 60 urodziny mojego taty. Jest ona dodatkiem do tabletu, który mam nadzieje wprowadzi tatę w świat nowoczesnej technologii :)<br><br>Aplikacja służy łatwemu generowaniu powtarzających się oświadczeń o odpoczynku kierowców pojazdów zarobkowych powyżej 3,5t i jest dostępna za darmo dla wszystkich zainteresowanych.<br><br>W następnych krokach zostaniesz poproszony o wpisanie kilku podstawowych informacji o firmie, osobie oświadczającej i kierowcy. Informacje te będą następnie wykorzystywane przy kolejnych oświadczeniach, co znaczy że już się tutaj nie zobaczymy. Pozdrawiam!]]></string>
    <string name="button_title_start_app">Rozpocznij</string>
    <string name="activity_title_company">Informacje o przedsiębiorstwie</string>
    <string name="activity_title_declarer">Informacje o oświadczającym</string>
    <string name="activity_title_driver">Informacje o kierowcy</string>
    <string name="save">Zapisz</string>
    <string name="hint_declarer">Oświadczający</string>
    <string name="hint_Driver">Kierowca</string>
    <string name="activity_title_declarers">Wybór oświadczającego</string>
    <string name="activity_title_drivers">Wybór kierowcy</string>
    <string name="add_new">Dodaj kolejnego</string>
    <string name="error_company_name_empty">Podaj nazwę przedsiębiorstwa</string>
    <string name="error_company_address_too_short">Za mało danych</string>
    <string name="error_phone_number_too_short">Numer telefonu zbyt krótki. Nie zapomnij o kierunkowym kraju (+48 dla Polski)</string>
    <string name="error_email_invalid">To nie jest prawidłowy adres e-mail</string>
    <string name="error_name_invalid">To nie wygląda na prawidłowe imię i nazwisko</string>
    <string name="error_position_empty">Należy podtać stanowisko</string>
    <string name="error_id_number_too_short">Numer zbyt krótki</string>
    <string name="error_place_of_signing_empty">Podaj miejsce podpisania</string>
    <string name="end_Date_set_dialog_message">Czy chcesz ustawić tą datę jako daty podpisania dokumentu?</string>
    <string name="Yes">Tak</string>
    <string name="No">No</string>
</resources>
