<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        tools:context="net.techbrewery.weekendowka.navigation.NavigationActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/companyInputLayoutAtFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/companyInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_company_name"
                tools:text="Przewóz Osób Stanisław Kwiecień" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressInputLayoutAtFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/addressInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                tools:text="Pasturka 16A, 28-400, Pińczów, Polska" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneInputLayoutAtFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/phoneInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                tools:text="+48 604 321 024" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayoutAtFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/emailInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_e_mail"
                android:inputType="textEmailAddress"
                tools:text="busponidzie@gmail.com" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/declarerNameInputLayoutAtFormFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/declarerPositionInputLayoutAtFormFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/declarerNameInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_declarer_name"
                tools:text="Stanisław Kwiecień" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/declarerPositionInputLayoutAtFormFragment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/declarerNameInputLayoutAtFormFragment"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/declarerBirthdayInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_declarer_position"
                tools:text="właściciel" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverNameInputLayoutAtFormFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@+id/driverBirthdayInputLayoutAtFormFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/declarerNameInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverNamInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_declarer_name"
                tools:text="Jacek Kwiecień" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverBirthdayInputLayoutAtFormFragment"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/driverNameInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverBirthdayInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_driver_birthday"
                tools:text="02.08.0986" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverIdInputLayoutAtFormFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/driverEmploymentDateInputLayoutAtFormFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverNameInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverIdInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_driver_id"
                tools:text="AFX 353568" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverEmploymentDateInputLayoutAtFormFragment"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/driverIdInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverEmploymentDateInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_employment_date"
                tools:text="02.08.0986" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverRestStartDateInputLayoutAtFormFragment"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverIdInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverRestStartDateInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/driver_rest_date_start_hint"
                tools:text="12:00, 02.08.0986" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/driverRestEndDateInputLayoutAtFormFragment"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/driverRestStartDateInputLayoutAtFormFragment"
            app:layout_constraintTop_toTopOf="@+id/driverRestStartDateInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/driverRestEndDateInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/driver_rest_date_end_hint"
                tools:text="12:00, 02.08.0986" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/driverActionDropdownAtFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverRestStartDateInputLayoutAtFormFragment" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/placeOfDeclarerSigningInputLayoutAtFormFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/dateOfSigningInputLayoutAtFormFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverActionDropdownAtFormFragment">

            <EditText
                android:id="@+id/placeOfSigningInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_place_of_declarer_signing"
                tools:text="Pasturka" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateOfSigningInputLayoutAtFormFragment"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeOfDeclarerSigningInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/dateOfDeclarerSigningInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                tools:text="02.08.0986" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/placeOfDriverSigningInputLayoutAtFormFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/dateOfDriverSigningInputLayoutAtFormFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeOfDeclarerSigningInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/placeOfDriverSigningInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_place_of_driver_signing"
                tools:text="Pasturka" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateOfDriverSigningInputLayoutAtFormFragment"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeOfDriverSigningInputLayoutAtFormFragment">

            <EditText
                android:id="@+id/dateOfDriverSigningInputAtFormFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="Data"
                tools:text="02.08.0986" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>